# BeanChatUpdater

./: CMakeLists.txt  all-manifest.sh  app.rc  main.cpp  makeManifestFiles.sh  manifest-file.sh
ui/: Main.qml
updater/: arguments.cpp  arguments.h  downloader.cpp  downloader.h  filehasher.cpp  filehasher.h  fileverifier.cpp  fileverifier.h  latestresponse.cpp  latestresponse.h  manifest.cpp  manifest.h  manifestfile.h  updater.cpp  updater.h
